# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
.github/: pull_request_template.md
cli/: package.json
cli/src/: index.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  OPERATIONS.md  ORACLE.md  REQUIREMENTS_TRACEABILITY.md  SDK.md  SECURITY.md  SSS-1.md  SSS-2.md  TESTING.md
programs/sss-oracle/: Cargo.toml
programs/sss-oracle/src/: error.rs  lib.rs  state.rs
programs/sss-oracle/src/instructions/: compute.rs  initialize.rs  mod.rs  read_feed.rs  update_feed.rs
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-token/src/instructions/: admin.rs  burn.rs  compliance.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  roles.rs  view.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
sdk/core/: package.json  tsconfig.json
sdk/core/src/: compliance.ts  index.ts  oracle.ts  pda.ts  presets.ts  stablecoin.ts  types.ts
services/: Dockerfile  docker-compose.yml  package.json  tsconfig.json
services/src/: compliance-service.ts  indexer-service.ts  mint-burn-service.ts  webhook-service.ts
tests/: extended.test.ts  oracle.test.ts  sdk.test.ts  sss-1.test.ts  sss-2.test.ts
