[package]
name = "sss-oracle"
version = "0.1.0"
description = "Solana Stablecoin Standard - Oracle module for non-USD peg pricing"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "1.18.26"
constant_time_eq = { workspace = true }
blake3 = { workspace = true }
