[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "SSS Transfer Hook - Blacklist enforcement on every token transfer (SSS-2)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1", features = ["token", "token_2022"] }
spl-token-2022 = "3.0.4"
spl-tlv-account-resolution = "0.6.4"
spl-transfer-hook-interface = "0.6.3"
spl-pod = "0.2.5"
